--- a/AUTHORS
+++ b/AUTHORS
@@ -1479,6 +1479,7 @@ Sunil Mohan Adapa
 Supphachoke Suntiwichaya
 Susan Farley
 Svante Signell
+Sveinar Søpler
 Sven Baars
 Sven Hesse
 Sven Paschukat
