--- a/AUTHORS
+++ b/AUTHORS
@@ -1144,6 +1144,7 @@ Niels de Carpentier
 Niels Kristian Bech Jensen
 Nigel Liang
 Nikita V. Youshchenko
+Nikola Pavlica
 Nikolas Zimmermann
 Nikolay Bogoychev
 Nikolay Sivov
@@ -1500,6 +1501,7 @@ Thomas Crider
 Thomas Faber
 Thomas Faller
 Thomas Fitzsimmons
+Thomas J. Moore
 Thomas Kho
 Thomas Mertes
 Thomas Mullaly
@@ -1519,6 +1521,7 @@ Tim Hentenaar
 Tim Newsome
 Timo Kreuzer
 Timo Teräs
+Tim Schumacher
 Tim Schwartz
 Tim Segall
 Tim Wanders
@@ -1588,6 +1591,7 @@ Vitaly Budovski
 Vitaly Lipatov
 Vitaly Perov
 Vit Hrachovy
+Vlad Bespalov
 Vladdy Impaler
 Vladimir Bespalov
 Vladimir Pankratov
