--- a/AUTHORS
+++ b/AUTHORS
@@ -222,6 +222,7 @@ Bruno Afonso
 Bruno Jesus
 Bryan DeGrendel
 Bryan Mayland
+Bryon Roche
 Byeong-Sik Jeon
 Caibin Chen
 Cameron Heide
@@ -426,6 +427,7 @@ Elias Benali
 Elias Ross
 Elie Morisse
 Emmanuel Maillard
+Enol Puente
 Enrico Horn
 Erez Volk
 Eric Anholt
@@ -448,6 +450,7 @@ Erik Svendsen
 Erwin Wolff
 Eryk Wieliczko
 Ethan Chen
+Ethan Lee
 Eugene Mayevski
 Eugeny Gorelov
 Evan Deaubl
@@ -773,6 +776,7 @@ John Reiser
 John Richardson
 John R. Sheets
 John Sheu
+John Thomson
 John Voltz
 John Zero
 Jonas Maebe
@@ -901,6 +905,7 @@ Krishna Murthy
 Kris Marsh
 Kristiaan Lenaerts
 Kristian Nielsen
+Kristján Gerhardsson
 Kristofer Henriksson
 Kristoffer Gleditsch
 Krzysztof Foltman
@@ -1003,6 +1008,7 @@ Martin Dalecki
 Martin Fuchs
 Martin Garton
 Martin Jesper Low Madsen
+Martin Liska
 Martin Payne
 Martin Petricek
 Martin Pilka
@@ -1306,6 +1312,7 @@ Reece H. Dunn
 Reinhard Karcher
 Rein Klazes
 Rémi Assailly
+Rémi Bernon
 Renu Rajput
 Rex Tsai
 Rhys McGuckin
